--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ html:
   use_edit_page_button      : true
   navbar_number_sections    : true  # Add a number to each section in your left navbar
   google_analytics_id       : ""  # A GA id that can be used to track book views.
-  home_page_in_navbar       : true  # Whether to include your home page in the left Navigation Bar
+  home_page_in_navbar       : false  # Whether to include your home page in the left Navigation Bar
   baseurl                   : "https://github.com/ARCTraining/cdt_fluids_2022"  # The base URL where your book will be hosted. Used for creating image previews and social links. e.g.: https://mypage.com/mybook/
   navbar_footer_text        :
     'Visit the <a href="https://arcleeds.github.io/">Research Computing Home Site</a>
